Quorum3/Library/Tests/Templating/Pass/TemplateUsingTemplatedClass_15.quorum
class Main
    action Main
        Container<Entry<integer>> c
        Entry<integer> e
        e:setEntry(5,"e")
        c:setContents(e)

        Entry<integer> f
        f = c:getContents()

        integer int = f:getValue()

        output int
    end
end