Quorum3/Library/Tests/Templating/Fail/TypeCheckTemplatedChildOfTempClass_12.quorum
class main
    action Main
        B<integer> b
        b:setSomething("wow!")
    end
end